Generate admin controller and views to update stores.

--- a/ShoeHouse/ShoeHouse.Web/Views/Shared/_AdminLayout.cshtml
+++ b/ShoeHouse/ShoeHouse.Web/Views/Shared/_AdminLayout.cshtml
@@ -10,6 +10,8 @@
     <div class="header">
         <div class="navbar-collapse collapse">
             @Html.ActionLink("Home", "index", "home")
+            @Html.ActionLink("Articles admin", "index", "admin")
+            @Html.ActionLink("Stores admin", "index", "storesadmin")
         </div>
     </div>
     <div class="container body-content">
