--- a/ShoeHouse/ShoeHouse.Web/Views/StoresAdmin/Index.cshtml
+++ b/ShoeHouse/ShoeHouse.Web/Views/StoresAdmin/Index.cshtml
@@ -18,7 +18,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Address)
         </th>
-        <th></th>
+        <th>Actions</th>
     </tr>
 
 @foreach (var item in Model) {
