Edit labels in admin pages.

--- a/ShoeHouse/ShoeHouse.Web/Views/StoresAdmin/Index.cshtml
+++ b/ShoeHouse/ShoeHouse.Web/Views/StoresAdmin/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "create")
+    @Html.ActionLink("Add store", "create")
 </p>
 <table class="table">
     <tr>
