--- a/ShoeHouse/ShoeHouse.Web/Views/Admin/Create.cshtml
+++ b/ShoeHouse/ShoeHouse.Web/Views/Admin/Create.cshtml
@@ -57,7 +57,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.StoreId, "StoreId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.StoreId, "Store", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("StoreId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.StoreId, "", new { @class = "text-danger" })
