Adapt html theme from free template, taken from freehtml5.co.

--- a/ShoeHouse/ShoeHouse.Web/Views/Home/Index.cshtml
+++ b/ShoeHouse/ShoeHouse.Web/Views/Home/Index.cshtml
@@ -1,15 +1,16 @@
-﻿<h2>ShoeHouse</h2>
-<span>The best shoes for your needs</span>
+﻿<div class="fh5co-entry padding" style="background-color: #655744">
+    <img src="/content/images/stores-2.jpg">
+    <div>
+        <span class="fh5co-post-date">Select one store to see the available products</span>
+        <p>
+            <select id="storeSelect">
+                <option value="">Select</option>
+            </select>
+        </p>
+    </div>
+</div>
 
-<div class="store">
-    <div id="storeRow">
-        Store
-        <select id="storeSelect">
-            <option value="">Select</option>
-        </select>
-    </div>
-    <div id="articlesContainer">
-    </div>
+<div id="articlesContainer">
 </div>
 
 @section scripts{
