--- a/ShoeHouse/ShoeHouse.Web/Views/Shared/_Layout.cshtml
+++ b/ShoeHouse/ShoeHouse.Web/Views/Shared/_Layout.cshtml
@@ -2,25 +2,52 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title - ShoeHouse</title>
-    @Styles.Render("~/Content/css")
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
+
+    @Styles.Render("~/Content/theme-css")
 </head>
 <body>
-    <div class="header">
-        <div class="navbar-collapse collapse">
-            @Html.ActionLink("Home", "index", "home")
+
+    <div class="fh5co-loader"></div>
+
+    <div id="page">
+
+        <div id="fh5co-aside" style="background-image: url(/content/images/site-back.jpg)">
+            <div class="overlay"></div>
+            <nav role="navigation">
+                <ul>
+                    <li><a href="/"><i class="icon-home"></i></a></li>
+                </ul>
+            </nav>
+            <div class="featured">
+                <span>The best shoes for your needs</span>
+                <h2>ShoeHouse</h2>
+            </div>
         </div>
+
+        <div id="fh5co-main-content">
+            <div class="fh5co-post">
+                @RenderBody()
+
+                <footer>
+                    <div>
+                        &copy; @DateTime.Now.Year Francisco Lopez | Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> | Images: <a href="http://pixabay.com" target="_blank">Pixabay</a>
+                    </div>
+                </footer>
+            </div>
+        </div>
+
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - ShoeHouse - FLopez</p>
-        </footer>
+
+    <div class="gototop js-top">
+        <a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/theme-scripts")
     @RenderSection("scripts", required: false)
 </body>
 </html>
